# azure-ad-monitor

./: .editorconfig  .gitignore  Dockerfile  README.md  SECURITY.md  docker-entrypoint.sh  pyproject.toml  requirements.txt  uwsgi.ini
.github/workflows/: build.yaml
azure-ad-monitor/: server.py
charts/azure-ad-monitor/: Chart.yaml  values.yaml
charts/azure-ad-monitor/templates/: _helpers.tpl  deployment.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
src/: creds.py  server.py
